--- a/ibm-watson-marketing-data-analysis-prediction.ipynb
+++ b/ibm-watson-marketing-data-analysis-prediction.ipynb
@@ -13,8 +13,8 @@
     "5. Regression Analysis with bith Continous and Categorical Variables\n",
     "6. Regression Analysis with excluding Non-significant variables\n",
     "7. Classification\n",
-    "> 7.1 Support Vector Classification\n",
-    "> 7.2 Random Forest Classifier\n",
+    "7.1 Support Vector Classification\n",
+    "7.2 Random Forest Classifier\n",
     "8. Feature Importance\n"
    ]
   },
@@ -39,7 +39,8 @@
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns               # Provides a high level interface for drawing attractive and informative statistical graphics\n",
+    # Provides a high level interface for drawing attractive and informative statistical graphics\n",
+    "import seaborn as sns                                     
     "%matplotlib inline\n",
     "sns.set()\n",
     "from subprocess import check_output\n",
