--- a/ibm-watson-marketing-data-analysis-prediction.ipynb
+++ b/ibm-watson-marketing-data-analysis-prediction.ipynb
@@ -39,8 +39,7 @@
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    # Provides a high level interface for drawing attractive and informative statistical graphics\n",
-    "import seaborn as sns                                     
+    "import seaborn as sns                                     # Provides a high level interface for drawing attractive and informative statistical graphics\n",
     "%matplotlib inline\n",
     "sns.set()\n",
     "from subprocess import check_output\n",
@@ -62,7 +61,7 @@
     "        ax.annotate('{0:.1f}'.format(p.get_height()), (p.get_x()+w, p.get_height()+h))\n",
     "\n",
     "import os\n",
-    "print(os.listdir(\"../input\"))\n"
+    "print(os.listdir(\"../\"))\n"
    ]
   },
   {
